--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-typescript": "^7.7.2",
     "@babel/runtime-corejs3": "^7.7.2",
     "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-docs": "^5.2.6",
     "@storybook/addon-knobs": "^5.2.6",
     "@storybook/addon-links": "^5.2.6",
     "@storybook/addons": "^5.2.6",
@@ -51,11 +52,14 @@
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.11",
     "@types/storybook__react": "^4.0.2",
+    "@types/styled-components": "^4.4.0",
+    "@types/styled-system": "^5.1.3",
     "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.6",
     "commitizen": "^4.0.3",
     "cz-lerna-changelog": "^2.0.2",
     "eslint": "^6.6.0",
@@ -69,9 +73,12 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "styled-components": "^4.4.1",
+    "styled-system": "^5.1.2",
     "stylelint": "^11.1.1",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-standard": "^19.0.0",
+    "stylelint-config-airbnb": "^0.0.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.12.1",
     "ts-jest": "^24.1.0",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2"
