--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -18,6 +18,8 @@
     "url": "git+https://github.com/asadhazara/storybook-components-lerna.git"
   },
   "peerDependencies": {
-    "react": "^16.12.0"
+    "react": "^16.0.0",
+    "styled-components": "^4.0.0",
+    "styled-system": "^5.0.0"
   }
 }
