--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "jsx": "react",
     "target": "esnext",
     "module": "esnext",
+    "lib": ["dom", "es2015", "es6", "esnext"],
+    "types": ["react", "jest", "node"],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "removeComments": true,
