--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/runtime-corejs3": "^7.7.2",
     "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-docs": "^5.2.6",
+    "@storybook/addon-info": "^5.2.6",
     "@storybook/addon-knobs": "^5.2.6",
     "@storybook/addon-links": "^5.2.6",
     "@storybook/addons": "^5.2.6",
@@ -72,6 +73,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
+    "react-docgen-typescript-loader": "^3.4.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1",
     "styled-system": "^5.1.2",
