--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "packages": ["packages/*"],
-  "version": "independent",
+  "npmClient": "yarn",
   "useWorkspaces": true,
-  "npmClient": "yarn"
+  "version": "independent"
 }
