chore(modified scripts): modified scripts

--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "lint:ts": "eslint 'packages/**/*.ts{,x}'",
     "lint": "run-p -c lint:*",
     "prerelease": "yarn build",
-    "release": "lerna publish",
+    "release": "lerna publish --conventional-commits --skip-npm",
     "bootstrap": "lerna bootstrap",
-    "version": "lerna version --conventional-commits --yes",
     "clean": "lerna clean",
     "storybook": "start-storybook -p 6006",
     "build:docs": "build-storybook --docs",
