chore: added command config to lerna.json

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "lint:ts": "eslint 'packages/**/*.ts{,x}'",
     "lint": "run-p -c lint:*",
     "prerelease": "yarn build",
-    "release": "lerna publish --conventional-commits --skip-npm",
-    "version": "lerna version --conventional-commits",
+    "release": "lerna publish",
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean",
     "storybook": "start-storybook -p 6006",
@@ -91,6 +90,5 @@
     "commitizen": {
       "path": "./node_modules/cz-lerna-changelog"
     }
-  },
-  "version": "0.0.0"
+  }
 }
