chore: stage git throught yarn command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "lerna run --parallel 'build:es'",
     "build:old": "lerna exec --parallel 'BABEL_ENV=build babel src --root-mode upward --out-dir dist --source-maps --extensions .ts,.tsx --delete-dir-on-start --no-comments'",
     "postbuild": "yarn build:declarations",
-    "commit": "git-cz",
+    "commit": "git add . && git-cz",
     "fix": "run-p -c 'lint:* --fix'",
     "lint:css": "stylelint 'packages/**/*.ts{,x}'",
     "lint:ts": "eslint 'packages/**/*.ts{,x}'",
