--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,7 @@
     "noEmit": false,
     "emitDeclarationOnly": true,
     "declaration": true,
+    "noImplicitAny": true,
     "paths": {
       "@taxi/*": ["./node_modules/@taxi/*/src"]
     }
