--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "module": "esnext",
     "lib": ["dom", "es2015", "es6", "esnext"],
     "types": ["react", "jest", "node"],
-    "noImplicitAny": false, //needs to be deleted once storybook docs-gen get fixed
+    "noImplicitAny": false,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "removeComments": true,
